<resources>
    <string name="app_name">DirectoryHub</string>
    <string name="appwidget_text">Widget</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-4590926477342036~6979528554</string>
    <string name="my_groups_footer_ad_unit_id" translatable="false">ca-app-pub-4590926477342036/1152486805</string>
    <string name="directory_footer_ad_unit_id" translatable="false">ca-app-pub-4590926477342036/3726324037</string>

    <string name="banner_ad_test_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="main_activity_title">Directory Hub</string>

    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="verify_password_placeholder">Verify Password</string>

    <string name="login_button_text">LOGIN</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="submit_button_text">Submit</string>

    <string name="entry_phone_header_text">Phone</string>
    <string name="entry_email_header_text">Email</string>
    <string name="entry_address_header_text">Address</string>
    <string name="entry_contact_info_header_text">Contact Info</string>
    <string name="entry_adults_header_text">Adults</string>
    <string name="entry_children_header_text">Children</string>

    <string name="logout_menu_item_text">Logout</string>

    <string name="by_name_text">By Name</string>
    <string name="by_creator_text">By Creator</string>
    <string name="by_unique_id">By Unique ID</string>

    <string name="share_email_text">You have been invited to join a group on Directory Hub!\n\nDownload the app from Google Play, search for your group using any of the following 3 criteria, then enter
        the password.</string>

    <string name="group_uid_email_label">UNIQUE ID:\u0020</string>
    <string name="group_name_email_label">GROUP NAME:\u0020</string>
    <string name="group_created_by_label">CREATED BY:\u0020</string>
    <string name="group_password_label">PASSWORD:\u0020</string>

    <string name="group_name_label_text">GROUP NAME</string>
    <string name="city_label_text">CITY</string>
    <string name="state_label_text">STATE</string>
    <string name="zip_label_text">ZIP</string>
    <string name="password_label_text">PASSWORD</string>
    <string name="group_logo_label_text">GROUP LOGO</string>
    <string name="upload_photo_button_text">UPLOAD PHOTO</string>
    <string name="remove_photo_button_text">REMOVE PHOTO</string>
    <string name="manage_administrators_button_text">MANAGE ADMINISTRATORS</string>
    <string name="delete_group_button_text">DELETE GROUP</string>
    <string name="submit_item_text">SUBMIT</string>

    <string name="entry_last_name_label_text">LAST NAME</string>
    <string name="entry_phone_label_text">PHONE</string>
    <string name="entry_email_label_text">EMAIL</string>
    <string name="entry_address_label_text">ADDRESS</string>
    <string name="entry_street_label_text">STREET</string>
    <string name="entry_line2_label_text">LINE 2</string>
    <string name="entry_line3_label_text">LINE 3</string>
    <string name="entry_people_label_text">PEOPLE</string>
    <string name="entry_people_add_button_text">ADD</string>

    <string name="person_first_name_placeholder">First Name</string>
    <string name="person_type_placeholder">Type</string>
    <string name="person_birth_order_placeholoder">Birth Order</string>
    <string name="person_phone_placeholoder">Phone</string>
    <string name="person_email_placeholder">Email</string>

    <string name="missing_first_name_title">Missing First Name</string>
    <string name="missing_first_name_message">Please provide a first name.</string>

    <string name="missing_last_name_title">Missing Last Name</string>
    <string name="missing_last_name_message">Please provide a last name.</string>

    <string name="missing_email_title">Missing Email</string>
    <string name="missing_email_message">Please provide an email.</string>

    <string name="missing_password_title">Missing Password</string>
    <string name="missing_password_message">Please provide a password.</string>

    <string name="password_mismatch_title">Password Mismatch</string>
    <string name="password_mismatch_message">Your passwords do not match. Please try again.</string>

    <string name="missing_group_name_title">Missing Group Name</string>
    <string name="missing_group_name_message">Please provide a group name.</string>

    <string name="missing_city_title">Missing City</string>
    <string name="missing_city_message">Please provide a city.</string>

    <string name="missing_state_title">Missing State</string>
    <string name="missing_state_message">Please provide a state.</string>

    <string name="edit_entry_title">Edit Entry</string>
    <string name="add_entry_title">Add Entry</string>

    <string name="edit_person_title">Edit Person</string>
    <string name="add_person_title">Add Person</string>

    <string name="type">Type</string>
    <string name="husband">Husband</string>
    <string name="wife">Wife</string>
    <string name="single">Single</string>
    <string name="child">Child</string>

    <string name="birth_order">Birth Order</string>

    <string name="submit">Submit</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="delete_person_title">Delete Person</string>
    <string name="delete_person_message_prefix">Are you sure you want to delete\u0020</string>

    <string name="create_account_title">Create Account</string>

    <string name="create_group_title">Create Group</string>
    <string name="edit_group_title">Edit Group</string>

    <string name="delete_group_title">Delete Group</string>
    <string name="delete_group_message">This will permanently delete this group from the database. Are you sure you want to continue?</string>

    <string name="directory_title">Directory</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="delete_entry_message">Are you sure you want to continue?</string>

    <string name="added_contact_message">Added Contact</string>

    <string name="error_title">Error</string>

    <string name="password_reset_email_sent">Password Reset Email Sent</string>
    <string name="password_reset_email_sent_message">Please check your email to reset your password.</string>

    <string name="send_password_reset_email_title">Send Password Reset Email</string>
    <string name="send_password_reset_email_message_prefix">Send email to\u0020</string>

    <string name="manage_administrators_title">Manage Administrators</string>

    <string name="my_groups_title">My Groups</string>

    <string name="cannot_delete_title">Cannot Delete</string>
    <string name="cannot_delete_message_1">You are the only administrator for \"</string>
    <string name="cannot_delete_message_2">\", so you cannot delete it.</string>

    <string name="delete_from_my_groups_message_1">This will only remove \"</string>
    <string name="delete_from_my_groups_message_2">\" from \"My Groups\". You will be able to add it back again later. Continue?</string>

    <string name="search_groups_title">Search Groups</string>
    <string name="password_required">Password Required</string>
    <string name="enter_password_prefix">Enter the password to join the group \"</string>
    <string name="incorrect_password">Incorrect Password</string>

    <string name="created_by_prefix">Created by:\u0020</string>

    <string name="must_implement_interface">Must implement interface</string>

    <string name="st_child">st child</string>
    <string name="nd_child">nd child</string>
    <string name="rd_child">rd child</string>
    <string name="th_child">th child</string>

    <string name="phone_prefix">Phone:\u0020</string>
    <string name="email_prefix">Email:\u0020</string>

    <string name="missing_entry_last_name_title">Missing Last Name</string>
    <string name="missing_entry_last_name_message">A new entry must have a last name.</string>

    <string name="no_adults_title">No Adults</string>
    <string name="no_adults_message">A new entry must have at least 1 adult.</string>

    <string name="bad_phone_number_title">Bad Phone Number</string>
    <string name="bad_phone_number_message">Phone Numbers must be 12 characters long.</string>

    <string name="missing_spouse_title">Missing Spouse</string>

    <string name="missing_wife_message">A husband must have a wife.</string>
    <string name="missing_husband_message">A wife must have a husband.</string>

    <string name="missing_entry_first_name_title">Missing First Name</string>
    <string name="missing_entry_first_name_message">You must enter a first name.</string>

    <string name="missing_type_title">Missing Type</string>
    <string name="missing_type_messaage">Each person must have a type.</string>

    <string name="missing_birth_order_title">Missing Birth Order</string>
    <string name="missing_birth_order_message">Children must have a birth order.</string>

    <string name="duplicate_person_type_title">Duplicate Person Type</string>
    <string name="duplicate_person_type_message">Entries can only contain one\u0020</string>

    <string name="person_type_conflict_message">Married couples and adult Singles cannot be in the same entry.</string>

    <string name="duplicate_birth_order_title">Duplicate Birth Order</string>
    <string name="duplicate_birth_order_message">Birth Order must be unique.</string>

    <string name="unique_id_label">UNIQUE ID:\u0020</string>

    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="add_to_contacts">Add to Contacts</string>

    <string name="member">MEMBER</string>
    <string name="admin">ADMIN</string>

    <string name="add_group_title">Add Group</string>
    <string name="create">Create</string>
    <string name="search">Search</string>

    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">You are not connected to the internet. Please establish a connection.</string>

    <string name="total_people">Total People:\u0020</string>
    <string name="adults">Adults:\u0020</string>
    <string name="children">Children:\u0020</string>

    <string name="total_people_0">Total People: 0</string>
    <string name="adults_0">Adults: 0</string>
    <string name="children_0">Children: 0</string>

    //Content Descriptors
    <string name="delete_entry">Delete Entry</string>
    <string name="add_entry">Add Entry</string>
    <string name="delete_group">Delete Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="search_for_or_create_a_group">Search for or Create a Group</string>

    <string name="login_to_directory_hub">Login to Directory Hub</string>
    <string name="entry_detail">Entry Detail</string>
    <string name="add_or_edit_entry">Add or Edit Entry</string>

</resources>
