<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_lg">

    <Button
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clear"
        android:textColor="#000"
        android:text="@string/call"/>

    <Button
        android:id="@+id/text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clear"
        android:textColor="#000"
        android:text="@string/text"/>

    <Button
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clear"
        android:textColor="#000"
        android:text="@string/email"/>

    <Button
        android:id="@+id/add_to_contacts_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clear"
        android:textColor="#000"
        android:text="@string/add_to_contacts" />

</LinearLayout>