<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_sm"
    android:layout_marginLeft="@dimen/margin_sm"
    android:layout_marginRight="@dimen/margin_sm">

    <LinearLayout
        android:layout_marginBottom="@dimen/margin_sm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/first_name_placeholder"/>
        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/last_name_placeholder"/>

    </LinearLayout>

    <EditText
        android:id="@+id/create_account_email_edit_text"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        android:hint="@string/email_placeholder"/>

    <EditText
        android:id="@+id/create_account_password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        android:hint="@string/password_placeholder"/>

    <EditText
        android:id="@+id/verify_password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        android:hint="@string/verify_password_placeholder"/>

    <ProgressBar
        android:id="@+id/create_account_progress_bar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        />

    <Button
        android:id="@+id/submit_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_button_text" />

</LinearLayout>