<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ajz.directoryhub.activities.MainActivity"
    android:id="@+id/login_linear_layout"
    android:layout_margin="@dimen/margin_sm"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_edit_text"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder" />

    <EditText
        android:id="@+id/password_edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sm"
        android:hint="@string/password_placeholder"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_sm"
        android:text="@string/login_button_text"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/forgot_password_button_text"
        android:background="@color/clear"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/margin_sm"
            android:layout_gravity="center"
            android:text="@string/create_account_button_text" />

    </LinearLayout>

</LinearLayout>
