<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_sm"
            android:paddingBottom="@dimen/margin_sm">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm" >

                <TextView
                    android:id="@+id/last_name_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_last_name_label_text"
                    tools:text="LAST NAME" />
                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm" >

                <TextView
                    android:id="@+id/entry_phone_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_phone_label_text"
                    tools:text="PHONE" />
                <EditText
                    android:id="@+id/entry_phone_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm" >

                <TextView
                    android:id="@+id/entry_email_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_email_label_text"
                    tools:text="EMAIL" />
                <EditText
                    android:id="@+id/entry_email_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>

            <TextView
                android:id="@+id/address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_address_label_text"
                android:textSize="@dimen/font_md"
                android:layout_marginBottom="@dimen/margin_sm"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm"
                tools:text="ADDRESS" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm" >

                <TextView
                        android:id="@+id/entry_street_label"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/entry_street_label_text"
                        tools:text="STREET" />
                <EditText
                    android:id="@+id/entry_street_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm">

                <TextView
                    android:id="@+id/entry_line2_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_line2_label_text"
                    tools:text="LINE 2" />
                <EditText
                    android:id="@+id/entry_line2_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm">

                <TextView
                    android:id="@+id/entry_line3_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_line3_label_text"
                    tools:text="LINE 3" />
                <EditText
                    android:id="@+id/entry_line3_edit_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sm"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/city_state_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_sm"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/city_linear_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/city_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city_label_text"
                        tools:text="CITY" />
                    <EditText
                        android:id="@+id/city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/state_linear_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/state_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state_label_text"
                        tools:text="STATE" />
                    <EditText
                        android:id="@+id/state_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/zip_linear_layout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/zip_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zip_label_text"
                        tools:text="ZIP" />
                    <EditText
                        android:id="@+id/zip_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_sm"
                android:paddingRight="@dimen/margin_sm"
                android:paddingBottom="@dimen/margin_sm">

                <TextView
                    android:id="@+id/adults_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_people_label_text"
                    android:textSize="@dimen/font_md"
                    android:layout_marginRight="@dimen/margin_sm"
                    android:layout_marginBottom="@dimen/margin_sm"
                    android:textStyle="bold"
                    tools:text="PEOPLE" />

                <Button
                    android:id="@+id/add_person_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_people_add_button_text"
                    tools:text="ADD"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/people_linear_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/adults_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/adults_header_text_view"
                        android:text="@string/entry_adults_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:paddingLeft="@dimen/margin_sm"
                        android:paddingRight="@dimen/margin_sm"
                        android:textSize="@dimen/font_sm"
                        android:textStyle="bold"
                        tools:text="Adults" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/children_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/children_header_text_view"
                        android:text="@string/entry_children_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightGray"
                        android:paddingLeft="@dimen/margin_sm"
                        android:paddingRight="@dimen/margin_sm"
                        android:textSize="@dimen/font_sm"
                        android:textStyle="bold"
                        tools:text="Children" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">

        <View
            android:background="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="1dp" >

        </View>

        <Button
            android:id="@+id/submit_create_entry_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/clear"
            android:text="@string/submit_button_text"
            tools:text="SUBMIT"
            android:textSize="@dimen/font_sm"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </Button>

        <ProgressBar
            android:id="@+id/submit_create_entry_progress_bar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_sm"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>